projects/project-4/wordpress/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  ports:
    - port: 8081
      targetPort: 80
  selector:
    app: nginx
