projects/project-4/wordpress/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  labels:
    name: wordpress-ingress
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 8080
          - path: /my-next-app
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 8081
